--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,32 @@
 body {
-  background: green;
+  font-family:  -apple-system
+  ,BlinkMacSystemFont,Segoe
+  UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica
+  Neue,sans-serif;
+
+}
+
+ul {
+  padding: 0;
+}
+
+.container {
+  max-width: 1200px;
+  /*center*/
+  margin: 0 auto;
+}
+
+.languages {
+  /*center*/
+  display: flex;
+  justify-content: center;
+}
+
+.languages li {
+  margin: 10px;
+  font-weight: bolder;
+  color: #808080;
+  list-style-type: none;
+  cursor: pointer;
+
 }
